# check_for_lumen

./: Cargo.toml  README.md
src/: db.rs  main.rs  models.rs
static/: style.css
templates/: budgets.tera  categories.tera  dashboard.tera  layout.tera  login.tera  reports.tera  settings.tera  setup.tera  transactions.tera
