[package]
name = "lumen_check"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = { version = "0.31", features = ["chrono"] }
