[package]
name = "lumen_check"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.32.0"
rusqlite = { version = "0.38.0", features = ["chrono"] }
